Pagina de administração, melhoria no redirecionamento, modal e listagem para o user

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,3 +23,14 @@
     font-size: 3rem;
     font-family: "Ubuntu Condensed";
 }
+
+.divExitButton {
+    display: flex;
+    justify-content: flex-end;
+    margin: 1rem;
+}
+
+.exitButton {
+
+
+}
