mascaras nos campos e correções de redirecionamento e token

--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -9,17 +9,16 @@
     font-weight: bold;
 }
 
-.formRegister label,
-.formRegister button,
-.formRegister input {
-    margin: 0.3rem;
-    border: none;
-    padding: 0.2rem;
-    border-radius: 0.5rem;
-}
+/*.formRegister label,*/
+/*.formRegister button {*/
+/*    margin: 0.3rem;*/
+/*    border: none;*/
+/*    padding: 0.2rem;*/
+/*    border-radius: 0.5rem;*/
+/*}*/
 
-.formRegister button {
-    width: 47.5%;
-    height: 1.5rem;
-    background-color: white;
-}
+/*.formRegister button {*/
+/*    width: 47.5%;*/
+/*    height: 1.5rem;*/
+/*    background-color: white;*/
+/*}*/
