--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -4,21 +4,13 @@
     flex-direction: column;
 }
 
-.formLogin button,
-.formLogin input {
-    margin: 0.3rem;
-    border: none;
-    padding: 0.2rem;
-    border-radius: 0.5rem;
-}
-
-.formLogin button {
-    width: 47.5%;
-    height: 1.5rem;
-    border: none;
-    border-radius: 0.5rem;
-    background-color: white;
-}
+/*.formLogin button {*/
+/*    width: 47.5%;*/
+/*    height: 1.5rem;*/
+/*    border: none;*/
+/*    border-radius: 0.5rem;*/
+/*    background-color: white;*/
+/*}*/
 
 .formLogin .adminLogin {
     display: flex;
@@ -28,3 +20,13 @@
     margin-right: 0.5rem;
     color: white;
 }
+
+/*.formLogin .inputEmailLogin{*/
+/*    border: 2px solid rgba(0, 0, 0, 0.4);*/
+/*    font-size: 1rem;*/
+/*}*/
+
+/*.formLogin input:focus{*/
+/*    outline: 0;*/
+/*    border: 2px solid green;*/
+/*}*/
