--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,44 @@ code {
     monospace;
 }
 
+label,
 button {
-
+  margin: 0.3rem;
+  border: none;
+  padding: 0.2rem;
+  border-radius: 0.5rem;
 }
+
+button {
+  width: 47.5%;
+  height: 1.6rem;
+  background-color: white;
+  border: 2px solid rgba(0, 0, 0, 0.4);
+  font-size: 1rem;
+}
+
+button:hover {
+  border: 2px solid #4A90E2;;
+  cursor: pointer;
+}
+
+select,
+input {
+  margin: 0.3rem;
+  border: 2px solid rgba(0, 0, 0, 0.4);
+  font-size: 1rem;
+  padding-left: 0.4rem;
+  border-radius: 0.5rem;
+  background-color: white;
+}
+
+select {
+  padding-left: 0.2rem !important;
+}
+
+select:focus,
+input:focus{
+  outline: 0;
+  border: 2px solid #4A90E2;
+}
+
