--- a/src/pages/Admin/Admin.css
+++ b/src/pages/Admin/Admin.css
@@ -1,9 +1,17 @@
 .alterTable {
+    max-width: 6rem;
     margin: 1rem;
-    transform: translateY(-3.25rem);
+    transform: translateY(-3.85rem);
 }
 
 .adminContainerTable {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.adminContainerTable .titleAdmin {
+    text-align: center;
+    padding-bottom: 1rem;
+    font-size: 2rem;
 }
